# WF_building_assistant

./: .gitignore  DB_LOADER_ARCHITECTURE.md  DTO_DB_MODEL_COMPARISON.md  README.md  pyproject.toml
docs/: 00_PROJECT_OVERVIEW.md  01_ARCHITECTURE.md  02_TECHNOLOGY_STACK.md  03_API_ENDPOINTS.md  README.md  decorators_best_practices.md  design_database.md
docs/01_database/: entity_relations.md
migrations/: env.py
migrations/versions/: 3b2c99e4b1ef_add_all_project_table.py  ac70d7894b2d_add_all_project_table.py  c42132c20817_create_warframe_table.py  dc808e1eb3ad_.py  e4d62207685b_create_warframe_table.py  f158d7e5932e_create_warframe_table.py
scripts/: test_api_endpoints.py
src/api/: entity_fetcher.py
src/database/dao/: warframe_dao.py
src/database/db_config/: db_config.py
src/database/db_connection/: db_connection.py
src/database/db_fetcher/fetch_entity_data/: fetch_entity_data.py
src/database/db_fetcher/fetch_entity_names/: fetch_entity_names.py
src/database/db_loader/fetch_entity_data/: fetch_entity_data.py
src/database/docker/: docker-compose.yml
src/database/models/: ability_db_model.py  build_db_model.py  build_mod_db_model.py  companion_ability_db_model.py  companion_db_model.py  melee_weapon_db_model.py  mod_db_model.py  passive_ability_db_model.py  primary_weapon_db_model.py  secondary_weapon_db_model.py  warframe_db_model.py
src/decorators/: exception.py  logger.py
src/dto/: __init__.py  ability_dto.py  build_dto.py  companion_dto.py  melee_weapon_dto.py  mod_dto.py  primary_weapon_dto.py  secondary_weapon_dto.py  warframe_dto.py
(+2 files in other folders)
